--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* StarFilger */
+.star {
+  width: 2%;
+  fill: #FFB800;
+
 }
